Fix important bug and finish shorts page
Squashed commit of the following:

commit 0af4d13f3211658b05fc8acba2fe11a32f62f9f0
Author: dkvz <github@dkvz.eu>
Date:   Sun Nov 16 20:05:31 2025 +0100

    fix last page being off by 1

commit 6e5328d8747638d3d618473d1cc0f7fb1c08a1f0
Author: dkvz <github@dkvz.eu>
Date:   Sun Nov 16 18:00:57 2025 +0100

    make shorts not take the entire height in the page grid

commit 8dd56507d43e3d703f3a708f97e7ef4846a939c6
Author: dkvz <github@dkvz.eu>
Date:   Sun Nov 16 14:01:12 2025 +0100

    early shorts page, adapted from article page

commit bb07f910462e8984a7c7c1b2cdee17f1011c5ef4
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 21:08:12 2025 +0100

    update README

commit 5688beda7b0c0145ad52bbcd648dca472ffc756c
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 21:05:10 2025 +0100

    sort order toggle works, with caveats (see README)

commit 66b65271e16778016458db1a12983bf6f0c931b6
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 20:37:09 2025 +0100

    create event handler for sort order toggle

commit d2773b53d7165ade7fd85d593341c6c5dfb3973a
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 14:31:18 2025 +0100

    fix ToggleButton props not working

commit f095f5bab5e67d8158ab480d7e6f2d071cea8560
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 13:41:19 2025 +0100

    order toggle button displays how I want it to

commit 6d0795e178e3619f91dc9500c39d96c9ebcdad51
Author: dkvz <github@dkvz.eu>
Date:   Sat Nov 15 13:16:49 2025 +0100

    big styling overhaul for toggle button

--- a/app/assets/styles/cards.css
+++ b/app/assets/styles/cards.css
@@ -32,7 +32,7 @@
   }
 
   /* Has to be here for cascade priority reasons */
-  .card--rounded-bottom {
+  .card-short {
     border-bottom-right-radius: 10%;
   }
 
@@ -186,6 +186,11 @@
 
   .card-list--single .card {
     margin-top: 2rem;
+  }
+
+  /* Horrible hack that looks bad */
+  .content-card--page-card .card-short {
+    height: fit-content;
   }
 
 }
